--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+      "DefaultConnection": "Data source=LocalDevelopment.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
