--- a/client-side/package.json
+++ b/client-side/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^2.0.6",
+    "package.json": "^2.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
