--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,11 +55,11 @@ jobs:
     - name: Push frontend image to registry
       run: docker push registry.digitalocean.com/website-registry/website:frontend
 
-    # - name: Save DigitalOcean kubeconfig
-    #   run: doctl kubernetes cluster kubeconfig save ${{ secrets.CLUSTER_NAME }}
+    - name: Save DigitalOcean kubeconfig
+      run: doctl kubernetes cluster kubeconfig save ${{ secrets.CLUSTER_NAME }}
 
-    # - name: Delete current kubernetes deployment
-    #   run: kubectl delete -n default deployment website-app
+    - name: Delete current kubernetes deployment
+      run: kubectl delete -n default deployment website-app
 
-    # - name: Deploy new to DigitalOcean Kubernetes
-    #   run: kubectl apply -f $GITHUB_WORKSPACE/kubernetes/deployment.yml
+    - name: Deploy new to DigitalOcean Kubernetes
+      run: kubectl apply -f $GITHUB_WORKSPACE/kubernetes/backend-deployment.yml
