now it should work

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,8 +58,8 @@ jobs:
     - name: Save DigitalOcean kubeconfig
       run: doctl kubernetes cluster kubeconfig save ${{ secrets.CLUSTER_NAME }}
 
-    - name: Delete current kubernetes deployment
-      run: kubectl delete -n default deployment website-backend
+    # - name: Delete current kubernetes deployment
+    #   run: kubectl delete -n default deployment website-backend
 
     - name: Deploy new to DigitalOcean Kubernetes
       run: kubectl apply -f $GITHUB_WORKSPACE/kubernetes/frontend-deployment.yml
