--- a/kubernetes/frontend-deployment.yml
+++ b/kubernetes/frontend-deployment.yml
@@ -6,11 +6,11 @@ spec:
   replicas: 3
   selector:
     matchLabels:
-      name: frontend
+      name: website
   template:
     metadata:
       labels:
-        name: frontend
+        name: website
     spec:
       containers:
       - name: frontend-server
