--- a/kubernetes/backend-deployment.yml
+++ b/kubernetes/backend-deployment.yml
@@ -6,11 +6,11 @@ spec:
   replicas: 3
   selector:
     matchLabels:
-      name: website
+      name: website-backend
   template:
     metadata:
       labels:
-        name: website
+        name: website-backend
     spec:
       containers:
       - name: backend-server
@@ -30,4 +30,4 @@ spec:
                 name: website-prod
                 key: jwtkey
       imagePullSecrets:
-        - name: %
+        - name: registry-website-registry
