--- a/kubernetes/ingress-config.yml
+++ b/kubernetes/ingress-config.yml
@@ -1,19 +1,42 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: ingress-service
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
+  tls:
+  - hosts:
+    - jamesbonnerproject.com
+    - www.jamesbonnerproject.com
+    secretName: website-tls-cert
   rules:
-    - http:
+    - host: jamesbonnerproject.com
+      http:
         paths:
-          - path: /*
+          - path: /
             backend:
               serviceName: website-frontend
               servicePort: 80
-          - path: /api/*
+    - host: www.jamesbonnerproject.com
+      http:
+        paths:
+          - path: /
+            backend:
+              serviceName: website-frontend
+              servicePort: 80
+    - host: jamesbonnerproject.com
+      http:
+        paths:
+          - path: /api
+            backend:
+              serviceName: website-backend
+              servicePort: 80
+    - host: www.jamesbonnerproject.com
+      http:
+        paths:
+          - path: /api
             backend:
               serviceName: website-backend
               servicePort: 80
