--- a/kubernetes/load-balancer-service.yml
+++ b/kubernetes/load-balancer-service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: website-service
+  name: website-loadbalancer
 spec:
   type: LoadBalancer
   ports:
@@ -9,4 +9,4 @@ spec:
       port: 80
       targetPort: 80
   selector:
-    name: website
+    name: website-frontend
